# api/types.go
@@ -673,14 +673,16 @@ type ListModelResponse struct {
 
 // ProcessModelResponse is a single model description in [ProcessResponse].
 type ProcessModelResponse struct {
-	Name          string       `json:"name"`
-	Model         string       `json:"model"`
-	Size          int64        `json:"size"`
-	Digest        string       `json:"digest"`
-	Details       ModelDetails `json:"details,omitempty"`
-	ExpiresAt     time.Time    `json:"expires_at"`
-	SizeVRAM      int64        `json:"size_vram"`
-	ContextLength int          `json:"context_length"`
+	Name            string       `json:"name"`
+	Model           string       `json:"model"`
+	Size            int64        `json:"size"`
+	Digest          string       `json:"digest"`
+	Details         ModelDetails `json:"details,omitempty"`
+	ExpiresAt       time.Time    `json:"expires_at"`
+	SizeVRAM        int64        `json:"size_vram"`
+	ContextLength   int          `json:"context_length"`
+	GPULayers       int          `json:"gpu_layers"`
+	TotalLayers     int          `json:"total_layers"`
 }
 
 type TokenResponse struct {
